--- a/css/cssIndex.css
+++ b/css/cssIndex.css
@@ -48,7 +48,13 @@ h2 span{
     z-index: 0;
     /*box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.2);*/
 }
-
+div{
+    display: block;
+}
+p{
+    font-size: 18px;
+    text-align: justify;
+}
 #autor{
     cursor: pointer;
     color: black;
